2003-05-12  Aleksey Ryabchuk <ryabchuk@yahoo.com>
	* Application.cs
	* ContainerControl.cs
	* Control.cs
	* Form.cs
	* ScrollableControl.cs
	* StatusBar.cs
	* TabControl.cs
	* TabPage.cs : changes in the code for TAB key handling

2003-05-09  Aleksey Ryabchuk <ryabchuk@yahoo.com>
	* Control.cs
	* Form.cs
	* GroupBox.cs
	* Label.cs
	* UpDownBase.cs : some new stuff related to focus movement by the TAB key

2003-05-08  Aleksey Ryabchuk <ryabchuk@yahoo.com>
	* Control.cs : started implementation of keyboard handling
	* CroupBox.cs : set UserPaint style
	* TextBoxBase.cs : set subclass flag to allow catching of keyboard events

2003-05-07  Aleksey Ryabchuk <ryabchuk@yahoo.com>
	* Control.cs : static RegisterDefaultWindowClass method was added
	* ScrollableControl.cs : registration of "mono_scrollable_control" was moved to Control class
	* win32functions.cs : new constant DEFAULT_WINDOW_CLASS
	* PictureBox.cs : implemented

2003-05-07  Aleksey Ryabchuk <ryabchuk@yahoo.com>
	* Control.cs : use WS_OVERLAPPED instead of WS_OVERLAPPEDWINDOW, update text field in get Text property
	* TextBox.cs : use styles provided by TextBoxBase
	* TextBoxBase.cs : more methods and properties were implemented
	* win32enums.cs  : messages and notifications for EDIT control

2003-05-02  Aleksey Ryabchuk <ryabchuk@yahoo.com>
	* Control.cs : call OnTextChange
	* UpdownBase.cs 
	* DomainUpDown.cs : some more implementation
	* TextBox.cs : TextAlign, use base.CreateParams
	* TextBoxBase.cs : use base.CreateParams
	* Win32enums.cs : styles for edit box

2003-04-30  Aleksey Ryabchuk <ryabchuk@yahoo.com>
	* TabControl.cs
	* TabPage.cs : prevent pages from being added to the TabControl multiple times

2003-04-30  Aleksey Ryabchuk <ryabchuk@yahoo.com>
	* Control.cs : some fixes, added call to OnControlAdded, update visibility flag in Show and Hide
	* GroupBox.cs
	* Label.cs
	* ButtoBase.cs : use base.CreateParams
	* PictureBox.cs : call base.OnResize
	* RadioButton.cs : implemented
	* TabControl.cs